# den-gule-avis

./: README.md  api_spec.md  auto_update  docker-compose.yml  spec.md
auth/: .env  Dockerfile  api.md  env.example  package-lock.json  package.json  tsconfig.json
auth/prisma/: schema.prisma
auth/src/: BasedDb.ts  Database.ts  ORMDb.ts  SQLDb.ts  generateToken.ts  inject.ts  main.ts  router.ts
backend/: .env.example  Cargo.toml  Dockerfile  sqlx-data.json
backend/src/: auth.rs  based_db.rs  database.rs  id.rs  main.rs  types.rs
backend/src/db_impl/: based_db.rs  mod.rs  mysql.rs  orm.rs
frontend/: .gitignore  .prettierrc.toml  Dockerfile  package.json
frontend/server/: main.go
frontend/src/: App.tsx  Products.tsx  Topbar.tsx  index.css  main.css  main.tsx  products.css
frontend/src/api/: Comment.ts  Product.ts  addComment.ts  allProducts.ts  createProduct.ts  login.ts  oneProduct.ts  register.ts  url.ts  userFromToken.ts
frontend/src/components/: CommentField.tsx  Login.tsx  NoPage.tsx  Product.tsx  Products.tsx  Router.tsx  Topbar.tsx  login.css  products.css  topbar.css
frontend/src/pages/: CreateProduct.tsx  Index.tsx  Login.tsx  ProductView.tsx  Register.tsx  auth.css  createProduct.css  index.css  productView.css
mariadb/: init.sql
nginx/templates/: default.conf.template
