[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
async-trait = "0.1.64"
dotenv = { version = "0.15.0", optional = true }
openssl = "0.10.45"
quaint = { version = "0.1.13", optional = true, features = [ "mysql" ] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["mysql", "runtime-actix-rustls", "offline"], optional = true }
tokio = "1.25.0"

[features]
default = ["orm"]
mysql = ["dep:sqlx", "dep:dotenv"]
orm = ["dep:dotenv", "dep:quaint"]
based_db = []
